<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_secondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleHelpPass"
            android:text="@string/dialogoCambioPassTitle"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/textError"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialPassChangeUser"
            android:id="@+id/etxtLoginUser"
            android:textSize="14dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialActualPassChangeUser"
            android:id="@+id/etxtPassPpal"
            android:inputType="textPassword"
            android:textSize="14dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialNewPassChangeUser"
            android:id="@+id/etxtNewPassPpal"
            android:inputType="textPassword"
            android:textSize="14dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialConfirmPassChangeUser"
            android:textSize="14dp"
            android:id="@+id/etxtNewPassPpalConfirm"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialNewSeconPassChangeUser"
            android:id="@+id/etxtNewPassSecondary"
            android:inputType="textPassword"
            android:textSize="14dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialConfirmSeconPassChangeUser"
            android:id="@+id/etxtNewPassSecondaryConfirm"
            android:inputType="textPassword"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/msgResponsePassChange"
            android:layout_marginTop="30dp"
            android:textSize="14dp"/>

    </LinearLayout>

</LinearLayout>