<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="50dp"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adBannerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adbanner"
            android:layout_below="@id/toolbar">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloRegistroEncuestado"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:id="@+id/dniUsuario"
                android:hint="@string/hintDniRegPerf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="12"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:id="@+id/nombresUsuario"
                android:hint="@string/hintNombresRegPerf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="100"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutApellidoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:id="@+id/apellidosUsuario"
                android:hint="@string/hintApellidosRegPerf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="100"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:id="@+id/direccion"
                android:hint="@string/hintDireccionRegPerf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="200"
                />
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:id="@+id/genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="left"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#767786"
                android:text="@string/txtSexoRegPerf"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                />

            <RadioButton
                android:id="@+id/radioMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation = "horizontal"
                android:text="@string/txtRadioBtnMascRegPerf"
                android:textColor="@color/textBackDarkGray"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/textBackDarkGray"
                />

            <RadioButton
                android:id="@+id/radioFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation = "horizontal"
                android:text="@string/txtRadioBtnFemRegPerf"
                android:textColor="@color/textBackDarkGray"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/textBackDarkGray"
                />
        </RadioGroup>

        <!--<EditText
            android:id="@+id/genero"
            android:hint="Género"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:id="@+id/email"
                android:hint="@string/hintEmailRegPerf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="150"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText
                    android:id="@+id/edad"
                    android:hint="@string/hintEdadRegPerf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:maxLength="3"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutOcupacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_marginLeft="20dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText
                    android:id="@+id/ocupacion"
                    android:hint="@string/hintOcupacionRegPerf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            >
        <Button
            android:id="@+id/buttonIniciarTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnInicioTestRegPerf"
            android:layout_weight="0.8"
            android:layout_marginRight="10dp"
            android:textSize="18dp"
            android:textColor="@color/colorSecondaryText"
            android:background="@drawable/btn_rounded_box_blue"/>

        <Button
            android:id="@+id/buttonCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegresarRegPerf"
            android:layout_weight="1.2"
            android:textSize="18dp"
            android:textColor="@color/colorSecondaryText"
            android:background="@drawable/btn_rounded_grey_box"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>